--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "swagger": "^0.7.5",
+    "swagger-autogen": "^2.23.7",
     "typeorm": "^0.3.25"
   }
 }
