--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
-# Atenção: alterar para nossos dados!!!!!!!!
-
 PORT=3000
 
 DATABASE_TYPE=postgres
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASS=02022005
-DATABASE_NAME=fatec_web_test
+DATABASE_USER=admin
+DATABASE_PASS=admin2025
+DATABASE_NAME=bd_clinica_francisco
