--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DATABASE_PORT=5432
 DATABASE_USER=admin
 DATABASE_PASS=admin2025
 DATABASE_NAME=bd_clinica_francisco
+
+# Alterar: !!!!!!!!!!!!!!!!!!!!!!!!!!!!
+API_KEY=12345
