--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-PORT=3000
+# PORT=3000
 
-DATABASE_TYPE=postgres
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USER=admin
-DATABASE_PASS=admin2025
-DATABASE_NAME=bd_clinica_francisco
+# DATABASE_TYPE=postgres
+# DATABASE_HOST=dpg-d1rfi72li9vc73b63200-a
+# DATABASE_PORT=5432
+# DATABASE_USER=admin
+# DATABASE_PASS=4XmJDZslDuWNBRsDrrLX4uTUSw7MztLv
+# DATABASE_NAME=bd_clinica_francisco
 
 # Alterar: !!!!!!!!!!!!!!!!!!!!!!!!!!!!
 API_KEY=12345
