--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon src/app.ts --watch 'src/' -e ts",
+    "start": "ts-node src/app.ts",
     "swagger": "ts-node src/swagger.ts"
   },
   "keywords": [],
