--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon src/app.ts --watch 'src/' -e ts",
+    "build": "npx tsc",
     "start": "npx ts-node src/app.ts",
     "swagger": "ts-node src/swagger.ts",
     "lint": "eslint . --ext .ts"
