--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npx nodemon src/app.ts --watch 'src/' -e ts",
     "build": "npx tsc",
-    "start": "npx ts-node src/app.ts",
+    "start": "node dist/app.ts",
     "swagger": "ts-node src/swagger.ts",
     "lint": "eslint . --ext .ts"
   },
