--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
