--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/json": "^0.13.0",
     "@eslint/markdown": "^7.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
